syntax = "proto3";

package workflow.v1;

option go_package = "github.com/prashantsinghb/workflow-engine/api/service;service";

/* ========= Imports =========*/
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

/* ===== OpenAPI Metadata ===== */
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Workflow Engine API";
    version: "v1";
    description: "Control-plane API for workflow validation and execution";
  };
  schemes: HTTPS;
  consumes: "application/json";
  produces: "application/json";
};

/* ===== Service Definition ===== */
service WorkflowService {
  // Dry-run validation of a workflow definition
  rpc ValidateWorkflow(ValidateWorkflowRequest)
      returns (ValidateWorkflowResponse) {
    option (google.api.http) = {
      post: "/v1/projects/{project_id}/workflows:validate"
      body: "*"
    };
  }

  // Register a workflow under a project
  rpc RegisterWorkflow(RegisterWorkflowRequest)
      returns (RegisterWorkflowResponse) {
    option (google.api.http) = {
      post: "/v1/projects/{project_id}/workflows"
      body: "*"
    };
  }

  // List workflows in a project
  rpc ListWorkflows(ListWorkflowsRequest)
      returns (ListWorkflowsResponse) {
    option (google.api.http) = {
      get: "/v1/projects/{project_id}/workflows"
    };
  }

  // Get workflow details
  rpc GetWorkflow(GetWorkflowRequest)
      returns (GetWorkflowResponse) {
    option (google.api.http) = {
      get: "/v1/projects/{project_id}/workflows/{workflow_id}"
    };
  }

  // Start workflow execution
  rpc StartWorkflow(StartWorkflowRequest)
      returns (StartWorkflowResponse) {
    option (google.api.http) = {
      post: "/v1/projects/{project_id}/executions"
      body: "*"
    };
  }

  // Get execution status
  rpc GetExecution(GetExecutionRequest)
      returns (GetExecutionResponse) {
    option (google.api.http) = {
      get: "/v1/projects/{project_id}/executions/{execution_id}"
    };
  }

  rpc ListExecutions(ListExecutionsRequest) 
      returns (ListExecutionsResponse) {
    option (google.api.http) = {
      get: "/v1/projects/{project_id}/executions"
    };
  }

  rpc GetDashboardStats(GetDashboardStatsRequest)
      returns (GetDashboardStatsResponse) {
    option (google.api.http) = {
      get: "/v1/projects/{project_id}/dashboard/stats"
    };
  }

  rpc GetExecutionTimeline(GetExecutionTimelineRequest)
      returns (GetExecutionTimelineResponse) {
    option (google.api.http) = {
      get: "/v1/projects/{project_id}/executions/{execution_id}/timeline"
    };
  }
}

service ModuleService {

  rpc RegisterModule(RegisterModuleRequest)
      returns (RegisterModuleResponse) {
    option (google.api.http) = {
      post: "/v1/projects/{project_id}/modules"
      body: "*"
    };
  }

  rpc GetModule(GetModuleRequest)
      returns (GetModuleResponse) {
    option (google.api.http) = {
      get: "/v1/projects/{project_id}/modules/{name}/versions/{version}"
    };
  }

  rpc ListModules(ListModulesRequest)
      returns (ListModulesResponse) {
    option (google.api.http) = {
      get: "/v1/projects/{project_id}/modules"
    };
  }
}


/* ===== Messages ===== */

message WorkflowDefinition {
  string name = 1 [(google.api.field_behavior) = REQUIRED];
  string version = 2 [(google.api.field_behavior) = REQUIRED];
  string yaml = 3 [
    (google.api.field_behavior) = REQUIRED,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Raw workflow definition in YAML format"
    }
  ];
}

/* ---- Validate ---- */

message ValidateWorkflowRequest {
  string project_id = 1;
  WorkflowDefinition workflow = 2;
}

message ValidateWorkflowResponse {
  bool valid = 1;
  repeated string errors = 2;
}

/* ---- Register ---- */

message RegisterWorkflowRequest {
  string project_id = 1 [(google.api.field_behavior) = REQUIRED];
  WorkflowDefinition workflow = 2 [(google.api.field_behavior) = REQUIRED];
}

message RegisterWorkflowResponse {
  string workflow_id = 1;
}

/* ---- List Workflows ---- */

message ListWorkflowsRequest {
  string project_id = 1 [(google.api.field_behavior) = REQUIRED];
}

message ListWorkflowsResponse {
  repeated WorkflowInfo workflows = 1;
}

message WorkflowInfo {
  string id = 1;
  string name = 2;
  string version = 3;
  string project_id = 4;
}

message GetWorkflowRequest {
  string project_id = 1 [(google.api.field_behavior) = REQUIRED];
  string workflow_id = 2 [(google.api.field_behavior) = REQUIRED];
}

message GetWorkflowResponse {
  WorkflowInfo workflow = 1;
  string yaml = 2;
}

/* ---- Start Execution ---- */

message StartWorkflowRequest {
  string project_id = 1 [(google.api.field_behavior) = REQUIRED];
  string workflow_id = 2 [(google.api.field_behavior) = REQUIRED];
  map<string, google.protobuf.Value> inputs = 3;
  string client_request_id = 4 [(google.api.field_behavior) = REQUIRED];
}

message StartWorkflowResponse {
  string execution_id = 1;
  string state = 2;
}

/* ---- Get Execution ---- */

enum ExecutionState {
  EXECUTION_STATE_UNSPECIFIED = 0;
  PENDING = 1;
  RUNNING = 2;
  SUCCESS = 3;
  FAILED = 4;
}

message GetExecutionRequest {
  string project_id = 1 [(google.api.field_behavior) = REQUIRED];
  string execution_id = 2 [(google.api.field_behavior) = REQUIRED];
}

message GetExecutionResponse {
  ExecutionState state = 1;
  map<string, google.protobuf.Value> inputs = 2;
  map<string, google.protobuf.Value> outputs = 3;
  string error = 4;
}

/* ---- Module ---- */

message Module {
  string id = 1;
  string project_id = 2;
  string name = 3;
  string version = 4;

  string runtime = 5; // http | docker

  oneof spec {
    HttpModuleSpec http = 6;
    ContainerRegistryModuleSpec container_registry = 7;
  }

  map<string, google.protobuf.Value> inputs = 8;
  map<string, google.protobuf.Value> outputs = 9;
  google.protobuf.Struct runtime_config = 10;
}

message HttpModuleSpec {
  string method = 1;
  string url = 2;

  map<string, string> headers = 3;
  map<string,string> query_params = 4;
  google.protobuf.Struct body_template = 5;
  HttpAuth auth = 6;
  google.protobuf.Struct output_mapping = 7;

  int32 retry_count = 8;
  int32 timeout_ms = 9;
}

message HttpAuth {
  oneof type {
    ApiKeyAuth api_key = 1;
    BearerAuth bearer = 2;
    OAuth2Auth oauth2 = 3;
  }
}

message ApiKeyAuth {
  string header = 1;
  string value = 2;
}

message BearerAuth {
  string token = 1;
}

message OAuth2Auth {
  string token_url = 1;
  string client_id = 2;
  string client_secret = 3;
  string scope = 4;
}

message ContainerRegistryModuleSpec {
  string image = 1;
  repeated string command = 2;
  map<string, string> env = 3;

  string cpu = 4;
  string memory = 5;
}

message RegisterModuleRequest {
  string project_id = 1;
  string name = 2;
  string version = 3;
  string runtime = 4;

  oneof spec {
    HttpModuleSpec http = 5;
    ContainerRegistryModuleSpec container_registry = 6;
  }

  map<string, google.protobuf.Value> inputs = 7;
  map<string, google.protobuf.Value> outputs = 8;
}

message RegisterModuleResponse {
  string module_id = 1;
}

message GetModuleRequest {
  string project_id = 1;
  string name = 2;
  string version = 3;
}

message GetModuleResponse {
  Module module = 1;
}

message ListModulesRequest {
  string project_id = 1;
}

message ListModulesResponse {
  repeated Module modules = 1;
}

message ListExecutionsRequest {
  string project_id = 1;
  string workflow_id = 2; // optional filter
}

message ExecutionInfo {
  string id = 1;
  string workflow_id = 2;
  string workflow_name = 7; // Workflow name for display
  string project_id = 3;
  string client_request_id = 4;
  string state = 5;
  string error = 6;
}

message ListExecutionsResponse {
  repeated ExecutionInfo executions = 1;
}

/* ---- Dashboard Stats ---- */

message GetDashboardStatsRequest {
  string project_id = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetDashboardStatsResponse {
  int64 total_workflows = 1;
  int64 total_executions = 2;
  int64 running_executions = 3;
  double success_rate = 4; // Percentage (0-100)
}

/* ---- Execution Timeline ---- */

message GetExecutionTimelineRequest {
  string project_id = 1;
  string execution_id = 2; // UUID as string
}

message GetExecutionTimelineResponse {
  ExecutionTimeline timeline = 1;
}

message ExecutionTimeline {
  string execution_id = 1;
  string project_id = 2;
  string workflow_id = 3;

  string status = 4;

  google.protobuf.Timestamp started_at = 5;
  google.protobuf.Timestamp completed_at = 6;

  repeated ExecutionTimelineEvent events = 7;
}

message ExecutionTimelineEvent {
  google.protobuf.Timestamp timestamp = 1;
  string type = 2;

  string node_id = 3;
  string executor = 4;

  string message = 5;
  int64 duration_ms = 6;

  google.protobuf.Struct payload = 7;
}